# circom_lsp_poc

./: Cargo.toml  DEVLOG.md  PR_TODO.md  README.md  TODO.md
src/: ast.rs  backend.rs  helpers.rs  main.rs  parse.rs  wrappers.rs
